CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

MESSAGE(STATUS "Building Mouvement de Masse")
Project(MouvementDeMasse CXX)

SET(MOUVEMENT_DE_MASSE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "Mouvement de Masse src dir: ${MOUVEMENT_DE_MASSE_SRC_DIR}")
SET(MOUVEMENT_DE_MASSE_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "Mouvement de Masse bin dir: ${MOUVEMENT_DE_MASSE_BIN_DIR}")
SET(MOUVEMENT_DE_MASSE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSEIF(MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251") # dll interface
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4244") # int to float
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4351") # array init new behavior
ENDIF()

SET(CMAKE_AUTOMOC TRUE)

INCLUDE(FileLists.cmake)
INCLUDE(LibLists.cmake)

ADD_EXECUTABLE(MouvementDeMasse ${MOUVEMENT_DE_MASSE_SRC_FILES})
TARGET_LINK_LIBRARIES(MouvementDeMasse ${MOUVEMENT_DE_MASSE_LIBRARIES})
INCLUDE_DIRECTORIES(${MOUVEMENT_DE_MASSE_INCLUDE_DIRS})
